--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'jacoco'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -128,6 +130,40 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:$archcoreTestingVersion"
 
     androidTestImplementation "androidx.fragment:fragment-testing:$fragmenttestVersion"
+}
+
+task jacocoTestReport(type: JacocoReport) {
+    dependsOn 'createDebugCoverageReport'
+    dependsOn 'testDebugUnitTest'
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*',
+                      '**/*Test*.*', 'android/**/*.*',
+                      '**/*_MembersInjector.class',
+                      '**/Dagger*Component.class',
+                      '**/Dagger*Component$Builder.class',
+                      '**/*_*Factory.class',
+                      '**/*ComponentImpl.class',
+                      '**/*SubComponentBuilder.class']
+    def javaClasses = fileTree(
+            dir: "$buildDir/intermediates/classes/debug",
+            excludes: fileFilter
+    )
+    def kotlinClasses = fileTree(
+            dir: "$buildDir/tmp/kotlin-classes/debug",
+            excludes: fileFilter
+    )
+    def mainSrc = "${project.projectDir}/src/main/java"
+
+    sourceDirectories.from([mainSrc])
+    classDirectories.from([javaClasses, kotlinClasses])
+    executionData.from([fileTree(dir: "$buildDir", includes: [
+            "jacoco/testDebugUnitTest.exec",
+            "outputs/code-coverage/debugAndroidTest/connected/*coverage.ec" //Check this path or update to relevant path
+    ])])
 }
 
 // we need all open to run tests which  a we enable only for debug builds.
