--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':common', ':poeple', ':tv'
+include ':app', ':common', ':poeple', ':tv', ':domain'
 rootProject.name='Movie Sample'
